--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -26,10 +26,10 @@
             "styles": [
               "src/styles.css",
               "src/custom-theme.scss",
-              
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/sweetalert2/src/sweetalert2.scss"
+             
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
@@ -49,7 +49,6 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
-              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
@@ -131,5 +130,8 @@
       }
     }
   },
-  "defaultProject": "kcb-interview-automation-app"
+  "defaultProject": "kcb-interview-automation-app",
+  "cli": {
+    "analytics": false
+  }
 }
