--- a/package.json
+++ b/package.json
@@ -14,20 +14,23 @@
     "@akveo/ng2-completer": "^9.0.1",
     "@angular-material-components/datetime-picker": "^2.0.3",
     "@angular-material-components/moment-adapter": "^2.0.1",
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^10.2.3",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
+    "@angular/common": "~10.2.3",
+    "@angular/compiler": "~10.2.3",
+    "@angular/core": "~10.2.3",
     "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "~8.2.14",
+    "@angular/forms": "~10.2.3",
     "@angular/http": "^7.2.16",
     "@angular/material": "^8.2.3",
     "@angular/material-moment-adapter": "^10.2.7",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/platform-browser": "~10.2.3",
+    "@angular/platform-browser-dynamic": "~10.2.3",
+    "@angular/router": "~10.2.3",
     "@auth0/angular-jwt": "^5.0.1",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-common-types": "^0.2.32",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@github/markdown-toolbar-element": "^1.3.2",
     "@ng-bootstrap/ng-bootstrap": "^5.0.0",
     "@ngx-formly/bootstrap": "5.10.1",
@@ -35,48 +38,48 @@
     "@swimlane/ngx-charts": "^16.0.0",
     "@syncfusion/ej2-angular-navigations": "^18.2.58",
     "@tinymce/tinymce-angular": "^4.2.0",
-    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
     "dart-sass": "^1.25.0",
-    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "mat-markdown-editor": "0.0.8",
     "moment": "^2.29.0",
     "ng-bootstrap-datetime-angular": "^0.1.27",
-    "ng2-smart-table": "^1.5.0",
+    "ng2-smart-table": "^1.7.0",
     "ngx-bootstrap": "^6.1.0",
     "ngx-countdown": "^10.0.1",
     "ngx-device-detector": "^2.0.0",
     "ngx-toastr": "^10.1.0",
     "node-sass": "^4.14.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.6.3",
+    "rxjs-compat": "^6.6.3",
     "subsink": "^1.0.1",
     "sweetalert2": "^10.6.1",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "widgster": "^1.0.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular/cli": "~8.3.25",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.1002.0",
+    "@angular/cli": "~10.2.0",
+    "@angular/compiler-cli": "~10.2.3",
+    "@angular/language-service": "~10.2.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "ng2-completer": "^3.0.2",
-    "protractor": "~5.4.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "font-awesome": "^4.7.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng2-completer": "^3.0.3",
+    "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.5"
   }
 }
