--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "importHelpers": true,
     "target": "es2015",
     "skipLibCheck": true,
+    
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -25,6 +26,9 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictInjectionParameters": true,
+    "buildOptimizer": false,
+    "enableIvy": false,
+    "aot": false,
   }
 }
